--- a/AssStudentManager/web/WEB-INF/web.xml
+++ b/AssStudentManager/web/WEB-INF/web.xml
@@ -1,12 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>FilterHome</filter-name>
+        <filter-class>Filter.FilterHome</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterHome</filter-name>
+        <url-pattern>/majorload</url-pattern>
+        <url-pattern>/classload</url-pattern>
+        <url-pattern>/subjectload</url-pattern>
+        <url-pattern>/teacherload</url-pattern>
+        <url-pattern>/studentload</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>LoginSession</servlet-name>
         <servlet-class>controller.LoginSession</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MajorLoad</servlet-name>
+        <servlet-class>controller.MajorLoad</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ClassLoad</servlet-name>
+        <servlet-class>controller.ClassLoad</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SubjectLoad</servlet-name>
+        <servlet-class>controller.SubjectLoad</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TeacherLoad</servlet-name>
+        <servlet-class>controller.TeacherLoad</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginSession</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MajorLoad</servlet-name>
+        <url-pattern>/majorload</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ClassLoad</servlet-name>
+        <url-pattern>/classload</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SubjectLoad</servlet-name>
+        <url-pattern>/subjectload</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TeacherLoad</servlet-name>
+        <url-pattern>/teacherload</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
